--- a/public/contact.html
+++ b/public/contact.html
@@ -59,20 +59,20 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
-                <a href="index.html" class="navbar-brand">Hunger Halt</a>
+                <a href="index" class="navbar-brand">Hunger Halt</a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="causes.html" class="nav-item nav-link">Causes</a>
-                        <a href="blog.html" class="nav-item nav-link">Blog</a>
-                        <a href="login.html" class="nav-item nav-link">Login</a>
+                        <a href="index" class="nav-item nav-link">Home</a>
+                        <a href="about" class="nav-item nav-link">About</a>
+                        <a href="causes" class="nav-item nav-link">Causes</a>
+                        <a href="blog" class="nav-item nav-link">Blog</a>
+                        <a href="login" class="nav-item nav-link">Login</a>
 
-                        <a href="contact.html" class="nav-item nav-link active">Contact</a>
+                        <a href="contact" class="nav-item nav-link active">Contact</a>
                     </div>
                 </div>
             </div>
