--- a/public/profileuser.html
+++ b/public/profileuser.html
@@ -62,19 +62,18 @@
     <!-- Nav Bar Start -->
     <div class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
-            <a href="index.html" class="navbar-brand">Hunger Halt</a>
+            <a href="index" class="navbar-brand">Hunger Halt</a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="blog.html" class="nav-item nav-link">Blog</a>
-                    <a href="login.html" class="nav-item nav-link">Login</a>
+                    <a href="index" class="nav-item nav-link active">Home</a>
+                    <a href="about" class="nav-item nav-link">About</a>
+                    <a href="blog" class="nav-item nav-link">Blog</a>
 
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="profileuser" class="nav-item nav-link">Contact</a>
                     <a href="#" class="nav-item nav-link">Profile</a>
                 </div>
             </div>
