--- a/public/about.html
+++ b/public/about.html
@@ -259,7 +259,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="team-item">
                         <div class="team-img">
-                            <img src="img/team-3.jpg" alt="Team Image">
+                            <img style="margin-bottom: 45px;" src="img/team-3.jpg" alt="Team Image">
                         </div>
                         <div class="team-text">
                             <h2>Ratan Tata</h2>
@@ -276,7 +276,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="team-item">
                         <div class="team-img">
-                            <img src="img/team-4.jpg" alt="Team Image">
+                            <img style="margin-bottom: 30px;" src="img/team-4.jpg" alt="Team Image">
                         </div>
                         <div class="team-text">
                             <h2>James Alien</h2>
